# BookLibraryApi/ResourceParameters/ResourcesParameters.cs
@@ -15,5 +15,7 @@
         }
 
         public string Fields { get; set; }
+
+        public string SearchQuery { get; set; }
     }
 }
